--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,32 +1,34 @@
 <div class="container">
 
-  <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
-    <div class="panel panel-info">
-      <div class="panel-heading">
-        <div class="panel-title">Sign In</div>
-        <div style="float:right; font-size: 80%; position: relative; top:-10px"><a href="#">Forgot password?</a>
-        </div>
-      </div>
+    <div class="alert alert-success" role="alert" ng-show="message">{{message}}</div>
 
-      <div style="padding-top:30px" class="panel-body">
+    <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+        <div class="panel panel-info">
+            <div class="panel-heading">
+                <div class="panel-title">Sign In</div>
+                <div style="float:right; font-size: 80%; position: relative; top:-10px"><a href="#">Forgot password?</a>
+                </div>
+            </div>
 
-        <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
+            <div style="padding-top:30px" class="panel-body">
 
-        <form id="loginform" class="form-horizontal" role="form">
+                <div style="display:none" id="login-alert" class="alert alert-danger col-sm-12"></div>
 
-          <div style="margin-bottom: 25px" class="input-group">
+                <form id="loginform" class="form-horizontal" role="form">
+
+                    <div style="margin-bottom: 25px" class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i>
                         </span>
-            <input id="login-username" type="text" class="form-control" name="username" value="" placeholder="username or email">
-          </div>
+                        <input id="login-username" type="text" class="form-control" name="username" ng-model="username" placeholder="username or email">
+                    </div>
 
-          <div style="margin-bottom: 25px" class="input-group">
+                    <div style="margin-bottom: 25px" class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i>
                         </span>
-            <input id="login-password" type="password" class="form-control" name="password" placeholder="password">
-          </div>
+                        <input id="login-password" type="password" class="form-control" name="password" ng-model="password" placeholder="password">
+                    </div>
 
-          <!--                     <div class="input-group">
+                    <!--                     <div class="input-group">
                                   <div class="checkbox">
                                       <label>
                                           <input id="login-remember" type="checkbox" name="remember" value="1">Remember me
@@ -35,32 +37,32 @@
                               </div>
            -->
 
-          <div style="margin-top:10px" class="form-group">
-            <!-- Button -->
+                    <div style="margin-top:10px" class="form-group">
+                        <!-- Button -->
 
-            <div class="col-sm-12 controls">
-              <a id="btn-login" href="#" class="btn btn-success">Login  </a>
-              <a id="btn-fblogin" href="#" class="btn btn-primary">Login with Facebook</a>
+                        <div class="col-sm-12 controls">
+                            <a id="btn-login" class="btn btn-success" ng-click="login()">Login  </a>
+                            <a id="btn-fblogin" href="#" class="btn btn-primary">Login with Facebook</a>
 
-            </div>
-          </div>
+                        </div>
+                    </div>
 
 
-          <div class="form-group">
-            <div class="col-md-12 control">
-              <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%">
-                Don't have an account!
-                <a href="#/signup">
+                    <div class="form-group">
+                        <div class="col-md-12 control">
+                            <div style="border-top: 1px solid#888; padding-top:15px; font-size:85%">
+                                Don't have an account!
+                                <a href="#/signup">
                   Sign Up Here
                 </a>
-              </div>
+                            </div>
+                        </div>
+                    </div>
+                </form>
+
+
+
             </div>
-          </div>
-        </form>
-
-
-
-      </div>
+        </div>
     </div>
-  </div>
 </div>
