--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,6 +1,6 @@
-<div class="container">
+<div class="container" ng-controller="LoginCtrl as login">
 
-    <div class="alert alert-success" role="alert" ng-show="message">{{message}}</div>
+    <div class="alert alert-success" role="alert" ng-show="login.message">{{login.message}}</div>
 
     <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
         <div class="panel panel-info">
@@ -19,13 +19,13 @@
                     <div style="margin-bottom: 25px" class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i>
                         </span>
-                        <input id="login-username" type="text" class="form-control" name="username" ng-model="username" placeholder="username or email">
+                        <input id="login-username" type="text" class="form-control" name="username" ng-model="login.user.username" placeholder="username or email">
                     </div>
 
                     <div style="margin-bottom: 25px" class="input-group">
                         <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i>
                         </span>
-                        <input id="login-password" type="password" class="form-control" name="password" ng-model="password" placeholder="password">
+                        <input id="login-password" type="password" class="form-control" name="password" ng-model="login.user.password" placeholder="password">
                     </div>
 
                     <!--                     <div class="input-group">
@@ -41,7 +41,7 @@
                         <!-- Button -->
 
                         <div class="col-sm-12 controls">
-                            <a id="btn-login" class="btn btn-success" ng-click="login()">Login  </a>
+                            <a id="btn-login" class="btn btn-success" ng-click="login.login()">Login  </a>
                             <a id="btn-fblogin" href="#" class="btn btn-primary">Login with Facebook</a>
 
                         </div>
