--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" ng-controller="SignupCtrl as signup">
   <div id="signupbox" style="margin-top:50px" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
     <div class="panel panel-info">
       <div class="panel-heading">
@@ -17,33 +17,33 @@
           <div class="form-group">
             <label for="email" class="col-md-3 control-label">Email</label>
             <div class="col-md-9">
-              <input type="text" class="form-control" name="email" ng-model="registeredUser.email" placeholder="Email Address">
+              <input type="text" class="form-control" name="email" ng-model="signup.registeredUser.email" placeholder="Email Address">
             </div>
           </div>
 
           <div class="form-group">
             <label for="firstname" class="col-md-3 control-label">First Name</label>
             <div class="col-md-9">
-              <input type="text" class="form-control" name="firstname" ng-model="registeredUser.firstName" placeholder="First Name">
+              <input type="text" class="form-control" name="firstname" ng-model="signup.registeredUser.firstName" placeholder="First Name">
             </div>
           </div>
           <div class="form-group">
             <label for="lastname" class="col-md-3 control-label">Last Name</label>
             <div class="col-md-9">
-              <input type="text" class="form-control" name="lastname" ng-model="registeredUser.lastName" placeholder="Last Name">
+              <input type="text" class="form-control" name="lastname" ng-model="signup.registeredUser.lastName" placeholder="Last Name">
             </div>
           </div>
           <div class="form-group">
             <label for="password" class="col-md-3 control-label">Password</label>
             <div class="col-md-9">
-              <input type="password" class="form-control" name="passwd" ng-model="registeredUser.password" placeholder="Password">
+              <input type="password" class="form-control" name="passwd" ng-model="signup.registeredUser.password" placeholder="Password">
             </div>
           </div>
 
           <div class="form-group">
             <!-- Button -->
             <div class="col-md-offset-3 col-md-9">
-              <button id="btn-signup" type="button" class="btn btn-info" ng-click="save()"><i class="icon-hand-right"></i> &nbsp Sign Up</button>
+              <button id="btn-signup" type="button" class="btn btn-info" ng-click="signup.save()"><i class="icon-hand-right"></i> &nbsp Sign Up</button>
               <span style="margin-left:8px;">or</span>
             </div>
           </div>
