Fixed controllerAs syntax based on styleguide rule Y038

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -1,4 +1,4 @@
-<div class="container" ng-controller="LoginCtrl as login">
+<div class="container">
 
     <div class="alert alert-success" role="alert" ng-show="login.message">{{login.message}}</div>
 
