--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -1,4 +1,4 @@
-<div class="container" ng-controller="SignupCtrl as signup">
+<div class="container">
   <div id="signupbox" style="margin-top:50px" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
     <div class="panel panel-info">
       <div class="panel-heading">
