Implemented spinner using angular-busy library for login and signup

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -2,7 +2,7 @@
 
     <div class="alert alert-success" role="alert" ng-show="login.message">{{login.message}}</div>
 
-    <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2">
+    <div id="loginbox" style="margin-top:50px;" class="mainbox col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2" cg-busy="login.busyPromise">
         <div class="panel panel-info">
             <div class="panel-heading">
                 <div class="panel-title">Sign In</div>
