--- a/app/views/todos.html
+++ b/app/views/todos.html
@@ -1,27 +1,25 @@
 <div class="container">
-    <div id="todoapp">
-
+    <div id="todoapp" cg-busy="todos.busyPromise">
         <h1 class="text-center">Angular TODO
            <p class="lead">AngularJS + Parse</p>
         </h1>
 
-        <div class="row" ng-repeat="todo in todos.todos" ng-class="{completed: todo.completed, editing: todo == editedTodo}">
+        <div class="row" ng-repeat="todo in todos.todos">
             <div class="col-sm-8 col-sm-offset-2">
                 <div class="input-group input-group-lg">
                     <span class="input-group-addon">
-                    <input class="toggle" type="checkbox" ng-model="todo.completed" ng-click="todoCompleted(todo)">
+                    <input class="toggle" type="checkbox" ng-model="todo.isComplete" ng-click="todos.todoCompleted(todo)">
                   </span>
                     <form ng-submit="doneEditing(todo)">
-                        <input class="edit form-control input-lg" ng-trim="false" ng-model="todo.name" ng-blur="doneEditing(todo)" todo-escape="revertEditing(todo)" todo-focus="todo == editedTodo">
+                        <input class="edit form-control input-lg" ng-model="todo.title">
                     </form>
                     <span class="input-group-btn">
-                    <button class="btn btn-default btn-lg destroy" ng-click="removeTodo(todo)"><i class="glyphicon glyphicon-remove"></i></button>
+                    <button class="btn btn-default btn-lg destroy" ng-click="todos.removeTodo(todo)"><i class="glyphicon glyphicon-remove"></i></button>
                   </span>
                 </div>
                 <!-- /input-group -->
             </div>
             <!-- /.col-lg-6 -->
-
         </div>
         <!-- /row -->
 
@@ -57,7 +55,7 @@
         <div class="row">
             <div class="col-sm-4 col-sm-offset-2">
 
-                <button class="btn btn-default btn-lg" id="toggle-all" ng-model="allChecked" ng-click="markAll(allChecked)"><i class="fa fa-check"></i>
+                <button class="btn btn-default btn-lg" ng-model="todos.allChecked" ng-click="todos.markAll(todos.allChecked)"><i class="fa fa-check"></i>
                 </button>
                 Mark all as complete
             </div>
