Commented facebook option in login and signup

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -42,7 +42,7 @@
 
                         <div class="col-sm-12 controls">
                             <a id="btn-login" class="btn btn-success" ng-click="login.login()">Login  </a>
-                            <a id="btn-fblogin" href="#" class="btn btn-primary">Login with Facebook</a>
+                            <!--a id="btn-fblogin" href="#" class="btn btn-primary">Login with Facebook</a-->
 
                         </div>
                     </div>
