--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -44,16 +44,16 @@
             <!-- Button -->
             <div class="col-md-offset-3 col-md-9">
               <button id="btn-signup" type="button" class="btn btn-info" ng-click="signup.save()"><i class="icon-hand-right"></i> &nbsp Sign Up</button>
-              <span style="margin-left:8px;">or</span>
+              <!--span style="margin-left:8px;">or</span-->
             </div>
           </div>
 
-          <div style="border-top: 1px solid #999; padding-top:20px" class="form-group">
+          <!--div style="border-top: 1px solid #999; padding-top:20px" class="form-group">
 
             <div class="col-md-offset-3 col-md-9">
               <button id="btn-fbsignup" type="button" class="btn btn-primary" ng-click="signup()"><i class="icon-facebook"></i>   Sign Up with Facebook</button>
             </div>
-          </div>
+          </div-->
 
         </form>
       </div>
